--- a/frontend/src/app/chat/chat.component.html
+++ b/frontend/src/app/chat/chat.component.html
@@ -1,10 +1,20 @@
-<h1>Чат</h1>
-<p-select [options]="languages()" [(ngModel)]="selectedLanguage" optionLabel="name" optionValue="code" (onChange)="saveLanguage()"></p-select>
-<p-button (click)="authService.logout()">Выход</p-button>
-<div class="chat-messages">
-  @for (msg of messages(); track msg.timestamp) {
-    <p-message>{{ msg.text }}</p-message>
-  }
+<div class="chat-container">
+  <p-button label="Logout" (click)="authService.logout()"></p-button>
+
+  <div class="messages">
+    @for (message of messages(); track message.id) {
+      <div class="message">
+        {{ message.text }} {{ message.emoji }}
+      </div>
+    }
+  </div>
+
+  <div class="input-container">
+    <input type="text" [(ngModel)]="newMessage" placeholder="{{ 'message.placeholder' | translate }}"/>
+    <button (click)="toggleEmojiPicker()">😊</button>
+    @if (showEmojiPicker()) {
+      <emoji-picker (emoji-click)="addEmoji($event)"></emoji-picker>
+    }
+    <button (click)="sendMessage()">{{ 'send' | translate }}</button>
+  </div>
 </div>
-<input pInputText [(ngModel)]="newMessage" />
-<p-button (click)="sendMessage()">Отправить</p-button>
