--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,20 @@
-@use "tailwindcss";
-@use 'primeicons/primeicons.css';
+@use "primeicons/primeicons.css"; // PrimeIcons
 @plugin "tailwindcss-primeui";
+
+
+@layer tailwind-base, primeng, tailwind-utilities;
+
+@layer tailwind-base {
+  @tailwind base; // Tailwind preflight
+}
+
+@layer primeng {
+  // PrimeNG styles
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
+
+@custom-variant dark (&:where(.my-app-dark, .my-app-dark *));
