--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -18,5 +18,9 @@
     {{ authService.errorMessage() }}
   </div>
 } @else () {
-  <router-outlet></router-outlet>
+  <div class="fixed inset-0 flex items-center justify-center bg-gray-100 dark:bg-gray-900">
+    <div class="container mx-auto max-w-md p-6 bg-white dark:bg-gray-800 border-2 border-blue-500 rounded-lg shadow-lg">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 }
