--- a/frontend/src/app/components/chat/chat.component.html
+++ b/frontend/src/app/components/chat/chat.component.html
@@ -11,11 +11,12 @@
 
   <div class="input-container">
     <input type="text"
+           class="p-2 w-full"
            (keyup.enter)="sendMessage()"
            [(ngModel)]="newMessage"
            placeholder="{{ 'message.placeholder' | translate }}"/>
 
-    <button (click)="showDialog()">😊</button>
+    <button class="" (click)="showDialog()">😊</button>
 
     <p-dialog
       [header]="'select-emoji' | translate"
@@ -30,6 +31,6 @@
       <emoji-picker (emoji-click)="addEmoji($event)"></emoji-picker>
     </p-dialog>
 
-    <button (click)="sendMessage()">{{ 'send' | translate }}</button>
+    <p-button (click)="sendMessage()">{{ 'send' | translate }}</p-button>
   </div>
 </div>
