--- a/frontend/src/app/components/chat/chat.component.scss
+++ b/frontend/src/app/components/chat/chat.component.scss
@@ -9,6 +9,10 @@
 
 .input-container { display: flex; gap: 10px; }
 
+.owner {
+  text-align: end;
+}
+
 emoji-picker {
   width: 100%;
   max-height: 300px;
