Add avatar generation and display for chat messages
- Integrate `@fractalsoftware/random-avatar-generator` for avatar generation.
- Implement `generateAvatar` method in `SocketServices`.
- Update `ChatComponent` to display avatars with user messages.
- Enhance chat UI with updated styles for avatar and message metadata.
- Adjust dependencies in `package.json` and re-lock with `package-lock.json`.

--- a/frontend/src/app/components/chat/chat.component.html
+++ b/frontend/src/app/components/chat/chat.component.html
@@ -3,8 +3,26 @@
 
   <div class="messages" #messageContainer>
     @for (message of messages(); track message.timestamp) {
+
       <div class="message" [ngClass]="{'owner': message.owner}">
-        {{ message.text }} {{ message.emoji }}
+        @if (!message.owner) {
+          <div class="avatar">
+            <img [src]="message.avatar" [alt]="message.user.uid" [title]="message.userName">
+          </div>
+        }
+        <div class="message-info">
+          @if (!message.owner) {
+            <div class="user-name">
+              {{ message.userName }}
+            </div>
+          }
+          <div class="timestamp">
+            {{ message.timestamp | date: 'shortTime' }}
+          </div>
+          <div class="message-text">
+            {{ message.text }} {{ message.emoji }}
+          </div>
+        </div>
       </div>
     }
   </div>
